--- a/src/app/pages/food/list-food/list-food.component.html
+++ b/src/app/pages/food/list-food/list-food.component.html
@@ -2,35 +2,34 @@
     <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
 
         <ng-container matColumnDef="key">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> No. </th>
-            <td mat-cell *matCellDef="let food"> {{food.key}} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"> No. </th>
+            <td mat-cell *matCellDef="let food" class="text-truncate" style="max-width: 30px;">
+                {{food.key}}
+            </td>
         </ng-container>
 
         <ng-container matColumnDef="foodName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Tên sản phẩm </th>
-            <td mat-cell *matCellDef="let food"> {{food.foodName}} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"> Tên sản phẩm </th>
+            <td mat-cell *matCellDef="let food" class="text-truncate" style="max-width: 150px;">
+                {{food.foodName}}
+            </td>
         </ng-container>
 
         <ng-container matColumnDef="foodPrice">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Giá sản phẩm </th>
-            <td mat-cell *matCellDef="let food"> {{food.foodPrice | currency: 'VND'}} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"> Giá sản phẩm </th>
+            <td mat-cell *matCellDef="let food" class="text-truncate"> {{food.foodPrice | currency: 'VND'}} </td>
         </ng-container>
 
         <ng-container matColumnDef="foodType">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Loại sản phẩm </th>
-            <td mat-cell *matCellDef="let food"> {{food.foodType}} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"> Loại sản phẩm </th>
+            <td mat-cell *matCellDef="let food" class="text-truncate"> {{food.foodType}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="isOutOfStock">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Tình trạng </th>
-            <td mat-cell *matCellDef="let food"> {{food.isOutOfStock ? 'Hết hàng' : 'Còn hàng'}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="option">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Tuỳ chọn </th>
+        <ng-container matColumnDef="options">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"> Tuỳ chọn </th>
             <td mat-cell *matCellDef="let food">
                 <div *ngIf="food.options && food.options.length > 0; else noOptionBlock">
-                    <span *ngFor="let option of food.options; let i = index; let last = last">
+                    <span class="text-truncate" *ngFor="let option of food.options; let i = index; let last = last">
                         <a href="javascript:" (click)="openOptionDetails(food, option, i)">
                             {{ option.optionName }}
                         </a>
@@ -39,24 +38,32 @@
                                 <i class="fas fa-delete-left" style="color: #e60f0f;"></i>
                             </a>
                         </sup>
-                        (<a class="me-1" href="javascript:" (click)="openAddOptionItem(food, i)">Thêm item</a>)
                         <ng-container *ngIf="!last">, </ng-container>
                     </span>
                 </div>
                 <ng-template #noOptionBlock>
-                    <div>Không có tuỳ chọn</div>
+                    <div class="text-truncate">Không có tuỳ chọn</div>
                 </ng-template>
             </td>
         </ng-container>
 
         <ng-container matColumnDef="shopName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Cửa hàng </th>
-            <td mat-cell *matCellDef="let food"> {{food.shopName}} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"> Cửa hàng </th>
+            <td mat-cell *matCellDef="let food" class="text-truncate">
+                {{food.shopName}}
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="isOutOfStock">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"> Tình trạng </th>
+            <td mat-cell *matCellDef="let food" class="text-truncate">
+                {{food.isOutOfStock ? 'Hết hàng' : 'Còn hàng'}}
+            </td>
         </ng-container>
 
         <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef class="fw-bold">Actions</th>
-            <td mat-cell *matCellDef="let food">
+            <th mat-header-cell *matHeaderCellDef class="fw-bold text-truncate">Actions</th>
+            <td mat-cell *matCellDef="let food" class="text-truncate">
                 <button mat-icon-button color="accent" title="Thêm Option" (click)="openAddOption(food)">
                     <mat-icon>add</mat-icon>
                 </button>
