--- a/src/app/pages/food/edit-food/edit-food.component.html
+++ b/src/app/pages/food/edit-food/edit-food.component.html
@@ -1,5 +1,5 @@
 <div class="p-5">
-    <h4 class="mb-3">Cập nhật sản phẩm "{{ data.foodName }}"</h4>
+    <h4 class="mb-3 text-center">Cập nhật sản phẩm "{{ data.foodName }}"</h4>
     <form [formGroup]="editForm" (ngSubmit)="onSubmit()">
         <div class="row">
             <div class="col d-flex align-items-center justify-content-center">
