--- a/src/app/pages/shop/list-shop/list-shop.component.html
+++ b/src/app/pages/shop/list-shop/list-shop.component.html
@@ -70,7 +70,10 @@
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef class="fw-bold text-truncate">Actions</th>
             <td mat-cell *matCellDef="let shop" class="text-truncate">
-                <button mat-icon-button color="primary">
+                <button mat-icon-button color="accent" title="Thêm section" (click)="openAddSection(shop)">
+                    <mat-icon>add</mat-icon>
+                </button>
+                <button mat-icon-button color="primary" (click)="openEditForm(shop)">
                     <mat-icon>edit</mat-icon>
                 </button>
                 <button mat-icon-button color="warn" (click)="deleteShop(shop.key)">
