--- a/src/app/pages/food/add-food/add-food.component.html
+++ b/src/app/pages/food/add-food/add-food.component.html
@@ -1,5 +1,5 @@
 <form class="row m-5" [formGroup]="addFoodForm" #formDirective="ngForm" (ngSubmit)="onSubmit(formDirective)">
-    <div class="col-md-4 d-flex align-items-center justify-content-center">
+    <div class="col-md-5 d-flex align-items-center justify-content-center">
         <div class="form-group">
             <div *ngIf="selectedImage">
                 <img [src]="selectedImageSrc" class="mx-auto d-block" width="350px">
@@ -8,14 +8,41 @@
         </div>
     </div>
 
-    <div class="col-md-8">
+    <div class="col-md-7">
         <section class="mb-3">
             <mat-checkbox formControlName="isOutOfStock">
                 Is Out of Stock
             </mat-checkbox>
         </section>
+
         <div class="row mb-2">
-            <mat-form-field class="col-md-3">
+            <mat-form-field class="col-md-6">
+                <mat-label>Chọn cửa hàng</mat-label>
+                <mat-select name="key" formControlName="shopId" (selectionChange)="onShopSelectionChange()">
+                    <mat-option *ngFor="let shop of shops" [value]="shop.key">
+                        {{ shop.shopName }}
+                    </mat-option>
+                </mat-select>
+                <mat-error *ngIf="shopId?.errors?.['required']">
+                    Cửa hàng là <strong>bắt buộc</strong>
+                </mat-error>
+            </mat-form-field>
+
+            <mat-form-field class="col-md-6">
+                <mat-label>Chọn danh mục</mat-label>
+                <mat-select name="sectionId" formControlName="sectionId">
+                    <mat-option *ngFor="let section of selectedShopSections" [value]="section.key">
+                        {{ section.sectionName }}
+                    </mat-option>
+                </mat-select>
+                <mat-error *ngIf="!shopId?.value">
+                    Vui lòng chọn cửa hàng
+                </mat-error>
+            </mat-form-field>
+        </div>
+
+        <div class="row mb-2">
+            <mat-form-field class="col-md-6">
                 <mat-label>Tên sản phẩm</mat-label>
                 <input matInput formControlName="foodName">
                 <mat-error *ngIf="foodName?.errors?.['required']">
@@ -39,18 +66,6 @@
                 </mat-error>
                 <mat-error *ngIf="foodPrice?.errors?.['pattern']">
                     Định dạng giá không hợp lệ
-                </mat-error>
-            </mat-form-field>
-
-            <mat-form-field class="col-md-3">
-                <mat-label>Chọn cửa hàng</mat-label>
-                <mat-select name="key" formControlName="selectedShop">
-                    <mat-option *ngFor="let shop of shops" [value]="shop.key">
-                        {{ shop.shopName }}
-                    </mat-option>
-                </mat-select>
-                <mat-error *ngIf="selectedShop?.errors?.['required']">
-                    Cửa hàng là <strong>bắt buộc</strong>
                 </mat-error>
             </mat-form-field>
         </div>
