--- a/src/app/pages/food/edit-food/edit-food.component.html
+++ b/src/app/pages/food/edit-food/edit-food.component.html
@@ -17,13 +17,33 @@
             <div class="col">
                 <div class="row col">
                     <mat-form-field class="col">
-                        <mat-label>Tên sản phẩm</mat-label>
-                        <input matInput formControlName="foodName">
-                        <mat-error *ngIf="foodName?.errors?.['required']">
-                            Tên sản phẩm là <strong>bắt buộc</strong>
-                        </mat-error>
+                        <mat-label>Chọn cửa hàng</mat-label>
+                        <mat-select name="key" formControlName="shopId" (selectionChange)="onShopSelectionChange()">
+                            <mat-option *ngFor="let shop of shops" [value]="shop.key">
+                                {{ shop.shopName }}
+                            </mat-option>
+                        </mat-select>
                     </mat-form-field>
 
+                    <mat-form-field class="col-md-6">
+                        <mat-label>Chọn danh mục</mat-label>
+                        <mat-select name="sectionId" formControlName="sectionId">
+                            <mat-option *ngFor="let section of selectedShopSections" [value]="section.key">
+                                {{ section.sectionName }}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+                
+                <mat-form-field class="full-width">
+                    <mat-label>Tên sản phẩm</mat-label>
+                    <input matInput formControlName="foodName">
+                    <mat-error *ngIf="foodName?.errors?.['required']">
+                        Tên sản phẩm là <strong>bắt buộc</strong>
+                    </mat-error>
+                </mat-form-field>
+
+                <div class="row">
                     <mat-form-field class="col">
                         <mat-label>Loại sản phẩm</mat-label>
                         <input matInput formControlName="foodType">
@@ -31,9 +51,7 @@
                             Loại sản phẩm là <strong>bắt buộc</strong>
                         </mat-error>
                     </mat-form-field>
-                </div>
 
-                <div class="row">
                     <mat-form-field class="col">
                         <mat-label>Giá sản phẩm</mat-label>
                         <input matInput formControlName="foodPrice">
@@ -43,15 +61,6 @@
                         <mat-error *ngIf="foodPrice?.errors?.['pattern']">
                             Định dạng giá không hợp lệ
                         </mat-error>
-                    </mat-form-field>
-
-                    <mat-form-field class="col">
-                        <mat-label>Chọn cửa hàng</mat-label>
-                        <mat-select name="key" formControlName="shopId">
-                            <mat-option *ngFor="let shop of shops" [value]="shop.key">
-                                {{ shop.shopName }}
-                            </mat-option>
-                        </mat-select>
                     </mat-form-field>
                 </div>
 
