--- a/src/app/theme/layouts/admin/navigation/nav-content/nav-item/nav-item.component.html
+++ b/src/app/theme/layouts/admin/navigation/nav-content/nav-item/nav-item.component.html
@@ -1,4 +1,5 @@
-<li [ngClass]="item.classes" *ngIf="item.url && !item.external" [routerLinkActive]="['active']">
+<li [ngClass]="item.classes" *ngIf="item.url && !item.external" [routerLinkActive]="['active']"
+    [routerLinkActiveOptions]="{exact: true}">
     <a class="nav-link" [target]="item.target ? '_blank' : '_self'" [routerLink]="[item.url]"
         (click)="closeOtherMenu($event)">
         <span *ngIf="item.icon" class="pcoded-micon"><i [ngClass]="item.icon"></i></span>
