--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -1,4 +1,4 @@
-<app-card cardTitle="Quản lý cửa hàng" [options]="false">
+<!-- <app-card cardTitle="Quản lý cửa hàng" [options]="false">
     <mat-tab-group>
         <mat-tab label="Danh sách cửa hàng">
             <app-list-shop></app-list-shop>
@@ -8,4 +8,5 @@
             <app-add-shop></app-add-shop>
         </mat-tab>
     </mat-tab-group>
-</app-card>
+</app-card> -->
+<app-detail-shop></app-detail-shop>
