--- a/src/app/pages/food/add-food/add-food.component.html
+++ b/src/app/pages/food/add-food/add-food.component.html
@@ -8,7 +8,8 @@
         </div>
     </div>
 
-    <div class="col-md-7">
+    <!-- Code cho tất cả cửa hàng -->
+    <!-- <div class="col-md-7">
         <section class="mb-3">
             <mat-checkbox formControlName="isOutOfStock">
                 Is Out of Stock
@@ -59,6 +60,107 @@
             </mat-form-field>
 
             <mat-form-field class="col-md-3">
+                <mat-label>Giá sản phẩm</mat-label>
+                <input matInput type="number" formControlName="foodPrice">
+                <mat-error *ngIf="foodPrice?.errors?.['required']">
+                    Giá tiền là <strong>bắt buộc</strong>
+                </mat-error>
+                <mat-error *ngIf="foodPrice?.errors?.['pattern']">
+                    Định dạng giá không hợp lệ
+                </mat-error>
+            </mat-form-field>
+        </div>
+
+        <mat-form-field class="full-width">
+            <mat-label>Mô tả</mat-label>
+            <textarea matInput formControlName="foodDescription"></textarea>
+        </mat-form-field>
+
+        <div class="mb-3">
+            <strong class="me-2">Option:</strong>
+            <button mat-button color="primary" class="ms-2" type="button" (click)="openAddOption()">
+                <mat-icon aria-hidden="false" fontIcon="add"></mat-icon>
+                Thêm Option
+            </button>
+            <div class="mt-3" *ngFor="let option of options; let i = index">
+                <strong>{{ option.optionName }}
+                    <sup>
+                        <a class="me-1" href="javascript:" (click)="deleteOption(i)">
+                            <i class="fas fa-delete-left" style="color: #e60f0f;"></i>
+                        </a>
+                    </sup>:
+                </strong>
+                <span *ngFor="let item of option.optionList; let index = index; let last = last">
+                    <ng-template #popContent>
+                        <img src="{{ item.image }}" width="150px">
+                    </ng-template>
+                    <button type="button" mat-button style="width: fit-content;" [ngbPopover]="popContent"
+                        popoverTitle="{{ item.name }}, {{ item.price | currency: 'VND' }}"
+                        triggers="mouseenter:mouseleave">
+                        {{ item.name }}
+                    </button>
+                    <sup>
+                        <a class="me-1" href="javascript:" (click)="deleteOptionItem(option, index)">
+                            <i class="fas fa-delete-left" style="color: #e60f0f;"></i>
+                        </a>
+                    </sup>
+                    <ng-container *ngIf="!last">, </ng-container>
+                </span>
+                <button class="ms-2" mat-button color="accent" type="button" (click)="openAddOptionItem(option)">
+                    Thêm {{ option.optionName }}
+                </button>
+            </div>
+        </div>
+    </div> -->
+
+    <!-- Code riêng cho cửa hàng -->
+    <div class="col-md-7">
+        <section class="mb-3">
+            <mat-checkbox formControlName="isOutOfStock">
+                Is Out of Stock
+            </mat-checkbox>
+        </section>
+
+        <div class="row mb-2">
+            <!-- <mat-form-field class="col-md-6">
+                <mat-label>Chọn cửa hàng</mat-label>
+                <mat-select name="key" formControlName="shopId" (selectionChange)="onShopSelectionChange()">
+                    <mat-option *ngFor="let shop of shops" [value]="shop.key">
+                        {{ shop.shopName }}
+                    </mat-option>
+                </mat-select>
+                <mat-error *ngIf="shopId?.errors?.['required']">
+                    Cửa hàng là <strong>bắt buộc</strong>
+                </mat-error>
+            </mat-form-field> -->
+            <mat-form-field class="col-md-6">
+                <mat-label>Tên sản phẩm</mat-label>
+                <input matInput formControlName="foodName">
+                <mat-error *ngIf="foodName?.errors?.['required']">
+                    Tên sản phẩm là <strong>bắt buộc</strong>
+                </mat-error>
+            </mat-form-field>
+
+            <mat-form-field class="col-md-6">
+                <mat-label>Chọn danh mục</mat-label>
+                <mat-select name="sectionId" formControlName="sectionId">
+                    <mat-option *ngFor="let section of selectedShopSections" [value]="section.key">
+                        {{ section.sectionName }}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+
+        <div class="row mb-2">
+            <mat-form-field class="col">
+                <mat-label>Loại sản phẩm</mat-label>
+                <input matInput formControlName="foodType">
+                <mat-error *ngIf="foodType?.errors?.['required']">
+                    Loại sản phẩm là <strong>bắt buộc</strong>
+                </mat-error>
+            </mat-form-field>
+
+            <mat-form-field class="col">
                 <mat-label>Giá sản phẩm</mat-label>
                 <input matInput type="number" formControlName="foodPrice">
                 <mat-error *ngIf="foodPrice?.errors?.['required']">
