--- a/src/app/pages/food/edit-food/edit-food.component.html
+++ b/src/app/pages/food/edit-food/edit-food.component.html
@@ -15,7 +15,7 @@
             </div>
 
             <div class="col">
-                <div class="row col">
+                <!-- <div class="row col">
                     <mat-form-field class="col">
                         <mat-label>Chọn cửa hàng</mat-label>
                         <mat-select name="key" formControlName="shopId" (selectionChange)="onShopSelectionChange()">
@@ -33,14 +33,23 @@
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
-                </div>
-                
+                </div> -->
+
                 <mat-form-field class="full-width">
                     <mat-label>Tên sản phẩm</mat-label>
                     <input matInput formControlName="foodName">
                     <mat-error *ngIf="foodName?.errors?.['required']">
                         Tên sản phẩm là <strong>bắt buộc</strong>
                     </mat-error>
+                </mat-form-field>
+                
+                <mat-form-field class="full-width">
+                    <mat-label>Chọn danh mục</mat-label>
+                    <mat-select name="sectionId" formControlName="sectionId">
+                        <mat-option *ngFor="let section of selectedShopSections" [value]="section.key">
+                            {{ section.sectionName }}
+                        </mat-option>
+                    </mat-select>
                 </mat-form-field>
 
                 <div class="row">
