--- a/src/app/pages/food/list-food/list-food.component.html
+++ b/src/app/pages/food/list-food/list-food.component.html
@@ -47,12 +47,12 @@
             </td>
         </ng-container>
 
-        <ng-container matColumnDef="shopName">
+        <!-- <ng-container matColumnDef="shopName">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"> Cửa hàng </th>
             <td mat-cell *matCellDef="let food" class="text-truncate">
                 {{food.shopName}}
             </td>
-        </ng-container>
+        </ng-container> -->
 
         <ng-container matColumnDef="isOutOfStock">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"> Tình trạng </th>
