custom color page

--- a/src/app/pages/authentication/forgot-password/forgot-password.component.html
+++ b/src/app/pages/authentication/forgot-password/forgot-password.component.html
@@ -4,7 +4,7 @@
             <div class="row align-items-center text-center">
                 <div class="col-md-12">
                     <div class="card-body">
-                        <img src="assets/images/logo-dark.png" alt="logo" class="img-fluid mb-4" />
+                        <img src="assets/images/box_logo.svg" width="167px" alt="logo" class="img-fluid mb-4" />
                         <h4 class="mb-3 f-w-400">Reset Password</h4>
                         <p class="text-center">Please enter your email address to request a password reset.</p>
                         <div class="input-group my-3">
@@ -17,7 +17,7 @@
                                 Reset Password
                             </button>
                         </div>
-                        <p class="mb-2 text-muted">Go back? 
+                        <p class="mb-2 text-muted">Go back?
                             <a [routerLink]="['/auth/sign-in']" class="f-w-400">Sign in</a>
                         </p>
                     </div>
