--- a/src/app/theme/shared/components/loading-dots/loading-dots.component.html
+++ b/src/app/theme/shared/components/loading-dots/loading-dots.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="isLoading" class="loading-dots">
+<div *ngIf="isLoading" class="loading-dots mt-5">
     <h5 class="text-center">
         Đang tải dữ liệu <span class="dot1">.</span><span class="dot2">.</span><span class="dot3">.</span>
     </h5>
