--- a/src/scss/themes/layouts/_menu-ng.scss
+++ b/src/scss/themes/layouts/_menu-ng.scss
@@ -309,6 +309,7 @@ app-nav-group {
 
         &.pcoded-trigger {
           > .pcoded-submenu {
+            background-color: #F5F5DC;
             position: relative;
             opacity: 1;
             visibility: visible;
