--- a/src/scss/themes/pages/_authentication.scss
+++ b/src/scss/themes/pages/_authentication.scss
@@ -9,7 +9,7 @@
   overflow: hidden;
   min-width: 100%;
   min-height: 100vh;
-  background: linear-gradient(45deg, $primary-color, lighten($primary-color, 13%));
+  background: linear-gradient(45deg, #FA6400, #FFA878);
 
   @media (min-width: 1200px) {
     .container {
