--- a/src/app/pages/authentication/sign-up/sign-up.component.html
+++ b/src/app/pages/authentication/sign-up/sign-up.component.html
@@ -4,7 +4,7 @@
             <div class="row align-items-center text-center">
                 <div class="col-md-12">
                     <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()" class="card-body">
-                        <img src="assets/images/logo-dark.png" alt="logo" class="img-fluid mb-4" />
+                        <img src="assets/images/box_logo.svg" width="167px" alt="logo" class="img-fluid mb-4" />
                         <h4 class="mb-3 f-w-400">Sign up</h4>
 
                         <!-- Email -->
