--- a/src/app/theme/layouts/admin/admin.component.html
+++ b/src/app/theme/layouts/admin/admin.component.html
@@ -1,10 +1,12 @@
 <app-navigation class="pcoded-navbar menupos-fixed menu-light" [ngClass]="{
     'navbar-collapsed': navCollapsed,
     'mob-open': navCollapsedMob
-  }" (NavCollapsedMob)="navMobClick()"></app-navigation>
-<app-nav-bar class="navbar pcoded-header navbar-expand-lg navbar-light header-blue headerPos-fixed"
-    (NavCollapse)="this.navCollapsed = !this.navCollapsed" (NavCollapsedMob)="navMobClick()"></app-nav-bar>
-<div class="pcoded-main-container">
+  }" (NavCollapsedMob)="navMobClick()">
+</app-navigation>
+<app-nav-bar class="navbar pcoded-header navbar-expand-lg navbar-light navbar-color headerPos-fixed"
+    (NavCollapse)="this.navCollapsed = !this.navCollapsed" (NavCollapsedMob)="navMobClick()">
+</app-nav-bar>
+<div class="pcoded-main-container background-content">
     <div class="pcoded-wrapper">
         <div class="pcoded-content">
             <div class="pcoded-inner-content">
