--- a/src/app/theme/layouts/admin/nav-bar/nav-bar.component.html
+++ b/src/app/theme/layouts/admin/nav-bar/nav-bar.component.html
@@ -4,8 +4,7 @@
     <a href="javascript:" class="header-mobile-collapse" id="mobile-collapse1" (click)="this.NavCollapsedMob.emit()"><i
             class="feather icon-menu"></i></a>
     <a [routerLink]="['/dashboard/analytics']" class="b-brand">
-        <img id="main-logo" src="assets/images/logo.png" alt="logo-img" class="logo" />
-        <img src="assets/images/logo-icon.png" alt="logo-icon-img" class="logo-thumb" />
+        <img id="main-logo" src="assets/images/box_logo.svg" alt="logo-img" class="logo" width="167px" height="33px"/>
     </a>
     <a class="mob-toggler" [ngClass]="{ on: this.menuClass }" href="javascript:" (click)="toggleMobOption()"><i
             class="feather icon-more-vertical"></i></a>
