--- a/src/app/theme/layouts/admin/navigation/nav-content/nav-content.component.html
+++ b/src/app/theme/layouts/admin/navigation/nav-content/nav-content.component.html
@@ -1,4 +1,4 @@
-<ng-scrollbar (clickOutside)="navMob()" style="height: calc(100vh - 56px)">
+<ng-scrollbar (clickOutside)="navMob()" style="height: calc(100vh - 56px);" class="custom-background">
     <div class="navbar-content">
         <ul class="nav pcoded-inner-navbar" (clickOutside)="fireOutClick()">
             <ng-container *ngFor="let item of navigations">
