--- a/src/app/theme/shared/components/card/card.component.scss
+++ b/src/app/theme/shared/components/card/card.component.scss
@@ -7,3 +7,7 @@
     width: calc(100vw) !important;
     height: 100vh !important;
 }
+
+.background-card {
+    background-image: linear-gradient(-225deg, #FFFEFF 0%, #D7FFFE 100%);
+}
