--- a/src/scss/themes/_custom.scss
+++ b/src/scss/themes/_custom.scss
@@ -58,7 +58,7 @@
       top: 0;
       width: 4px;
       height: 100%;
-      background: $primary-color;
+      background: #FA6400;
     }
   }
 }
