--- a/src/styles.scss
+++ b/src/styles.scss
@@ -69,3 +69,11 @@ $manage-shop-theme: mat.define-light-theme((color: (primary: $manage-shop-primar
 
 // custom
 @import 'scss/themes/custom';
+
+.mat-mdc-table {
+    background-image: linear-gradient(to top, #dfe9f3 0%, white 100%);
+}
+
+.mat-mdc-paginator-container {
+    background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
+}
