--- a/src/app/pages/dashboard/dash-analytics/dash-analytics.component.html
+++ b/src/app/pages/dashboard/dash-analytics/dash-analytics.component.html
@@ -2,8 +2,8 @@
     <!-- order-card start -->
     <div class="col-md-6 col-xl-3" *ngFor="let card of cards">
         <app-card [hidHeader]="true" cardClass="{{ card.background }} order-card">
-            <h6 class="text-white">{{ card.title }}</h6>
-            <h2 class="text-end text-white"><i class="feather {{ card.icon }} float-start"></i><span>{{ card.number
+            <h6>{{ card.title }}</h6>
+            <h2 class="text-end"><i class="feather {{ card.icon }} float-start"></i><span>{{ card.number
                     }}</span>
             </h2>
             <p class="m-b-0">{{ card.text }}<span class="float-end">{{ card.no }}</span></p>
@@ -52,14 +52,14 @@
                 </app-card>
             </div>
             <div class="col-md-6">
-                <app-card [hidHeader]="true" cardClass="bg-primary text-white">
+                <app-card [hidHeader]="true" cardClass="bg-primary">
                     <div class="row">
                         <div class="col-auto">
                             <span>Customers</span>
                         </div>
                         <div class="col text-end">
-                            <h2 class="mb-0 text-white">548</h2>
-                            <span class="text-white">5.2%<i class="feather icon-trending-up ms-1"></i></span>
+                            <h2 class="mb-0">548</h2>
+                            <span>5.2%<i class="feather icon-trending-up ms-1"></i></span>
                         </div>
                     </div>
                     <apx-chart [series]="chartOptions_2.series!" [chart]="chartOptions_2.chart!"
@@ -69,11 +69,11 @@
                         [plotOptions]="chartOptions_2.plotOptions" [tooltip]="chartOptions_2.tooltip" ></apx-chart>
                     <div class="row mt-3 text-center">
                         <div class="col">
-                            <h3 class="m-0 text-white"><i class="fas fa-circle f-10 m-r-5 text-white"></i>276</h3>
+                            <h3 class="m-0"><i class="fas fa-circle f-10 m-r-5"></i>276</h3>
                             <span class="ms-3">New</span>
                         </div>
                         <div class="col">
-                            <h3 class="m-0 text-white"><i class="fas fa-circle text-white f-10 m-r-5"></i>123</h3>
+                            <h3 class="m-0"><i class="fas fa-circle f-10 m-r-5"></i>123</h3>
                             <span class="ms-3">Return</span>
                         </div>
                     </div>
