--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,16 +33,16 @@ $manage-shop-theme: mat.define-light-theme((color: (primary: $manage-shop-primar
 @import 'scss/themes/font/theme-font';
 
 // main framework
-@import 'node_modules/bootstrap/scss/functions';
-@import 'node_modules/bootstrap/scss/variables';
+@import '../node_modules/bootstrap/scss/functions';
+@import '../node_modules/bootstrap/scss/variables';
 @import 'scss/settings/custom-variables';
 @import 'scss/settings/theme-variables';
 
 // bootstrap
-@import 'node_modules/bootstrap/scss/bootstrap';
-@import 'node_modules/bootstrap/scss/mixins';
-@import 'node_modules/bootstrap/scss/utilities';
-@import 'node_modules/bootstrap/scss/utilities/api';
+@import '../node_modules/bootstrap/scss/bootstrap';
+@import '../node_modules/bootstrap/scss/mixins';
+@import '../node_modules/bootstrap/scss/utilities';
+@import '../node_modules/bootstrap/scss/utilities/api';
 @import '../node_modules/bootstrap/dist/css/bootstrap.css';
 @import 'scss/themes/general';
 @import 'scss/themes/generic';
