--- a/src/app/pages/order/list-order/list-order.component.html
+++ b/src/app/pages/order/list-order/list-order.component.html
@@ -2,7 +2,7 @@
     <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
 
         <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef class="fw-bold text-truncate">Thao tác</th>
+            <th mat-header-cell *matHeaderCellDef class="fw-bold text-truncate">Chi tiết</th>
             <td mat-cell *matCellDef="let order" class="text-truncate">
                 <button mat-icon-button color="primary" title="Xem chi tiết đơn hàng" (click)="openOrderDetails(order)">
                     <mat-icon>visibility</mat-icon>
@@ -66,7 +66,10 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"
                 style="max-width: fit-content;"> Trạng thái </th>
             <td mat-cell *matCellDef="let order" class="text-truncate">
-                {{ order.status }}
+                <span [ngClass]="getStatusClass(order.status)">
+                    <i class="fas" [ngClass]="getStatusIcon(order.status)"></i>
+                    {{ order.status }}
+                </span>
             </td>
         </ng-container>
 
