--- a/src/styles.scss
+++ b/src/styles.scss
@@ -77,3 +77,11 @@ $manage-shop-theme: mat.define-light-theme((color: (primary: $manage-shop-primar
 .mat-mdc-paginator-container {
     background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
 }
+
+.mat-mdc-cell {
+    font-family: 'Poppins', sans-serif;
+}
+
+.mat-mdc-header-cell {
+    font-family: cursive;
+}
