--- a/src/app/theme/layouts/admin/nav-bar/nav-bar.component.html
+++ b/src/app/theme/layouts/admin/nav-bar/nav-bar.component.html
@@ -3,7 +3,7 @@
         (click)="navCollapse()"><span></span></a>
     <a href="javascript:" class="header-mobile-collapse" id="mobile-collapse1" (click)="this.NavCollapsedMob.emit()"><i
             class="feather icon-menu"></i></a>
-    <a [routerLink]="['/dashboard/analytics']" class="b-brand">
+    <a [routerLink]="['/dashboard']" class="b-brand">
         <img id="main-logo" src="assets/images/box_logo.svg" alt="logo-img" class="logo" width="167px" height="33px"/>
     </a>
     <a class="mob-toggler" [ngClass]="{ on: this.menuClass }" href="javascript:" (click)="toggleMobOption()"><i
