--- a/src/app/pages/food/list-food/list-food.component.html
+++ b/src/app/pages/food/list-food/list-food.component.html
@@ -1,89 +1,92 @@
-<div class="mat-elevation-z8 mt-4" *ngIf="!isLoading">
-    <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
+<div *ngIf="!isLoading">
+    <div class="table-responsive mt-4">
+        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
 
-        <ng-container matColumnDef="key">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"> No. </th>
-            <td mat-cell *matCellDef="let food" class="text-truncate" style="max-width: 30px;">
-                {{food.key}}
-            </td>
-        </ng-container>
+            <ng-container matColumnDef="key">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"> No. </th>
+                <td mat-cell *matCellDef="let food" class="text-truncate" style="max-width: 30px;">
+                    {{food.key}}
+                </td>
+            </ng-container>
 
-        <ng-container matColumnDef="foodName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"> Tên sản phẩm </th>
-            <td mat-cell *matCellDef="let food" class="text-truncate" style="max-width: 150px;">
-                {{food.foodName}}
-            </td>
-        </ng-container>
+            <ng-container matColumnDef="foodName">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"> Tên sản phẩm </th>
+                <td mat-cell *matCellDef="let food" class="text-truncate" style="max-width: 150px;">
+                    {{food.foodName}}
+                </td>
+            </ng-container>
 
-        <ng-container matColumnDef="foodPrice">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"> Giá sản phẩm </th>
-            <td mat-cell *matCellDef="let food" class="text-truncate"> {{food.foodPrice | currency: 'VND'}} </td>
-        </ng-container>
+            <ng-container matColumnDef="foodPrice">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"> Giá sản phẩm </th>
+                <td mat-cell *matCellDef="let food" class="text-truncate"> {{food.foodPrice | currency: 'VND'}} </td>
+            </ng-container>
 
-        <ng-container matColumnDef="foodType">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"> Loại sản phẩm </th>
-            <td mat-cell *matCellDef="let food" class="text-truncate"> {{food.foodType}} </td>
-        </ng-container>
+            <ng-container matColumnDef="foodType">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"> Loại sản phẩm </th>
+                <td mat-cell *matCellDef="let food" class="text-truncate"> {{food.foodType}} </td>
+            </ng-container>
 
-        <ng-container matColumnDef="options">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"> Tuỳ chọn </th>
-            <td mat-cell *matCellDef="let food">
-                <div *ngIf="food.options && food.options.length > 0; else noOptionBlock">
-                    <span class="text-truncate" *ngFor="let option of food.options; let i = index; let last = last">
-                        <a href="javascript:" (click)="openOptionDetails(food, option, i)">
-                            {{ option.optionName }}
-                        </a>
-                        <sup>
-                            <a href="javascript:" (click)="deleteOption(food, option)">
-                                <i class="fas fa-delete-left" style="color: #e60f0f;"></i>
+            <ng-container matColumnDef="options">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"> Tuỳ chọn </th>
+                <td mat-cell *matCellDef="let food">
+                    <div *ngIf="food.options && food.options.length > 0; else noOptionBlock">
+                        <span class="text-truncate" *ngFor="let option of food.options; let i = index; let last = last">
+                            <a href="javascript:" (click)="openOptionDetails(food, option, i)">
+                                {{ option.optionName }}
                             </a>
-                        </sup>
-                        <ng-container *ngIf="!last">, </ng-container>
-                    </span>
-                </div>
-                <ng-template #noOptionBlock>
-                    <div class="text-truncate">Không có tuỳ chọn</div>
-                </ng-template>
-            </td>
-        </ng-container>
+                            <sup>
+                                <a href="javascript:" (click)="deleteOption(food, option)">
+                                    <i class="fas fa-delete-left" style="color: #e60f0f;"></i>
+                                </a>
+                            </sup>
+                            <ng-container *ngIf="!last">, </ng-container>
+                        </span>
+                    </div>
+                    <ng-template #noOptionBlock>
+                        <div class="text-truncate">Không có tuỳ chọn</div>
+                    </ng-template>
+                </td>
+            </ng-container>
 
-        <!-- <ng-container matColumnDef="shopName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"> Cửa hàng </th>
-            <td mat-cell *matCellDef="let food" class="text-truncate">
-                {{food.shopName}}
-            </td>
-        </ng-container> -->
+            <!-- <ng-container matColumnDef="shopName">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"> Cửa hàng </th>
+                <td mat-cell *matCellDef="let food" class="text-truncate">
+                    {{food.shopName}}
+                </td>
+            </ng-container> -->
 
-        <ng-container matColumnDef="isOutOfStock">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"> Tình trạng </th>
-            <td mat-cell *matCellDef="let food" class="text-truncate">
-                {{food.isOutOfStock ? 'Hết hàng' : 'Còn hàng'}}
-            </td>
-        </ng-container>
+            <ng-container matColumnDef="isOutOfStock">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"> Tình trạng </th>
+                <td mat-cell *matCellDef="let food" class="text-truncate">
+                    {{food.isOutOfStock ? 'Hết hàng' : 'Còn hàng'}}
+                </td>
+            </ng-container>
 
-        <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef class="fw-bold text-truncate">Actions</th>
-            <td mat-cell *matCellDef="let food" class="text-truncate">
-                <button mat-icon-button color="accent" title="Thêm Option" (click)="openAddOption(food)">
-                    <mat-icon>add</mat-icon>
-                </button>
-                <button mat-icon-button color="primary" (click)="openEditForm(food)">
-                    <mat-icon>edit</mat-icon>
-                </button>
-                <button mat-icon-button color="warn" (click)="deleteFood(food.key)">
-                    <mat-icon>delete</mat-icon>
-                </button>
-            </td>
-        </ng-container>
+            <ng-container matColumnDef="actions">
+                <th mat-header-cell *matHeaderCellDef class="fw-bold text-truncate">Actions</th>
+                <td mat-cell *matCellDef="let food" class="text-truncate">
+                    <button mat-icon-button color="accent" title="Thêm Option" (click)="openAddOption(food)">
+                        <mat-icon>add</mat-icon>
+                    </button>
+                    <button mat-icon-button color="primary" (click)="openEditForm(food)">
+                        <mat-icon>edit</mat-icon>
+                    </button>
+                    <button mat-icon-button color="warn" (click)="deleteFood(food.key)">
+                        <mat-icon>delete</mat-icon>
+                    </button>
+                </td>
+            </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+
+        <mat-spinner *ngIf="addingSuccess" class="custom-spinner" diameter="50"></mat-spinner>
+    </div>
 
     <mat-paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons
         aria-label="Select page of periodic elements">
     </mat-paginator>
-
-    <mat-spinner *ngIf="addingSuccess" class="custom-spinner" diameter="50"></mat-spinner>
 </div>
+
 <app-loading-dots [isLoading]="isLoading"></app-loading-dots>
