--- a/src/styles.scss
+++ b/src/styles.scss
@@ -85,3 +85,35 @@ $manage-shop-theme: mat.define-light-theme((color: (primary: $manage-shop-primar
 .mat-mdc-header-cell {
     font-family: cursive;
 }
+
+.table-responsive {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+}
+
+mat-table {
+    width: 1200px;
+    max-width: 1200px;
+    margin-bottom: 1rem;
+    display: table;
+    border-collapse: collapse;
+    margin: 0px;
+}
+
+mat-row,
+mat-header-row {
+    display: table-row;
+}
+
+mat-cell,
+mat-header-cell {
+    word-wrap: initial;
+    display: table-cell;
+    padding: 0px 5px;
+    line-break: unset;
+    width: auto;
+    white-space: nowrap;
+    overflow: hidden;
+    vertical-align: middle;
+}
