--- a/src/app/pages/food/confirm-delete/confirm-delete.component.html
+++ b/src/app/pages/food/confirm-delete/confirm-delete.component.html
@@ -1,5 +1,5 @@
-<h2 mat-dialog-title>Xác nhận</h2>
-<mat-dialog-content>Bạn có chắc muốn xoá?</mat-dialog-content>
+<h2 mat-dialog-title>{{ data.title }}</h2>
+<mat-dialog-content>{{ data.message }}</mat-dialog-content>
 <mat-dialog-actions>
     <button mat-button mat-dialog-close>No</button>
     <button mat-button color="warn" [mat-dialog-close]="true" cdkFocusInitial>Yes</button>
