--- a/src/app/pages/food/list-food/list-food.component.html
+++ b/src/app/pages/food/list-food/list-food.component.html
@@ -11,7 +11,8 @@
 
             <ng-container matColumnDef="foodName">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"> Tên sản phẩm </th>
-                <td mat-cell *matCellDef="let food" class="text-truncate" style="max-width: 150px;">
+                <td mat-cell *matCellDef="let food" class="text-truncate" title="{{ food.foodName }}"
+                    style="max-width: 180px;">
                     {{food.foodName}}
                 </td>
             </ng-container>
@@ -31,12 +32,12 @@
                 <td mat-cell *matCellDef="let food">
                     <div *ngIf="food.options && food.options.length > 0; else noOptionBlock">
                         <span class="text-truncate" *ngFor="let option of food.options; let i = index; let last = last">
-                            <a href="javascript:" (click)="openOptionDetails(food, option, i)">
+                            <a href="javascript:" title="Thông tin Option" (click)="openOptionDetails(food, option, i)">
                                 {{ option.optionName }}
                             </a>
                             <sup>
-                                <a href="javascript:" (click)="deleteOption(food, option)">
-                                    <i class="fas fa-delete-left" style="color: #e60f0f;"></i>
+                                <a href="javascript:" title="Xoá Option" (click)="deleteOption(food, option)">
+                                    <i class="fas fa-close" style="color: #e60f0f;"></i>
                                 </a>
                             </sup>
                             <ng-container *ngIf="!last">, </ng-container>
